added landing page to ansible_playbooks/ubuntu_20.04/configs/index.html

--- a/ansible_playbooks/ubuntu_20.04/configs/index.html
+++ b/ansible_playbooks/ubuntu_20.04/configs/index.html
@@ -5,6 +5,7 @@
 			<li><a href="www/">www</a></li>
 			<li><a href="git/">git</a></li>
 			<li><a href="dav/">dav</a></li>
+			<li><a href="dabu/">dabu</a></li>
 		</ul>
 	</body>
 </html>
